kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  creationTimestamp: null
  labels:
    app: flask
spec:
  selector:
    matchLabels:
      app: flask
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 2
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: flask
    spec:
      containers:
      - image: dineshtamang14/devopswithpython:latest
        name: flask
        ports:
        - containerPort: 5000
          name: flask
