kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  labels:
    app: flask
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: flask
