kubernetes/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
spec:
  rules:
  - host: "todos.com"
    https:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: flask-service
              port: 
                number: 5000

  tls:
   - hosts:
     - "todos.com"
       secretName: tls-secret
